--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -475,6 +475,16 @@ header {
 
 .projects-list {
   margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .projects-list h2 {
@@ -485,11 +495,15 @@ header {
 
 @media screen and (min-width: 768px) {
   .projects-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -509,19 +523,18 @@ header {
 }
 
 .project-item {
-  margin-right: 30px;
   margin-bottom: 30px;
-  width: 370px;
+  max-width: 450px;
   border-width: 1px;
   border-style: solid;
   border-color: #eeeeee;
 }
 
-.project-item:nth-child(3n) {
-  margin-right: 0;
+.project-item a {
+  display: block;
 }
 
-.project-item:nth-last-child(-n + 3) {
+.project-item:last-child {
   margin-bottom: 0;
 }
 
@@ -529,6 +542,28 @@ header {
 .project-item > a:focus {
   -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
           box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .project-item {
+    max-width: 354px;
+  }
+  .project-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .project-item {
+    margin-right: 30px;
+    max-width: 370px;
+  }
+  .project-item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .project-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .project-text {
