--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,5 +1,8 @@
 .projects-list {
   margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h2 {
     font-size: 18px;
@@ -7,8 +10,9 @@
     letter-spacing: 0.06em;
   }
   @media screen and (min-width: 768px) {
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: flex-start;
   }
   @media screen and (min-width: 1600px) {
     margin-top: 35px;
@@ -25,18 +29,17 @@
 }
 
 .project-item {
-  margin-right: 30px;
   margin-bottom: 30px;
-  width: 370px;
+  max-width: 450px;
   border-width: 1px;
   border-style: solid;
   border-color: $border-color;
 
-  &:nth-child(3n) {
-    margin-right: 0;
+  a {
+    display: block;
   }
 
-  &:nth-last-child(-n + 3) {
+  &:last-child {
     margin-bottom: 0;
   }
 
@@ -44,6 +47,26 @@
   & > a:focus {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06),
       0 1px 1px rgba(0, 0, 0, 0.12);
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1599px) {
+    max-width: 354px;
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1600px) {
+    margin-right: 30px;
+    max-width: 370px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
